[gd_scene load_steps=8 format=3 uid="uid://de4xsdppa1e2c"]

[ext_resource type="Theme" uid="uid://drabaa7jfibga" path="res://src/assets/themes/small_button.tres" id="1_5yryq"]
[ext_resource type="Script" uid="uid://c18wy856c4t0r" path="res://src/scripts/menus/about_menu.gd" id="1_dxe8x"]
[ext_resource type="Texture2D" uid="uid://iqimikjyunwk" path="res://src/assets/sprites/Home.png" id="2_dxe8x"]
[ext_resource type="FontFile" uid="uid://bmvtmpvoy1cwt" path="res://src/assets/fonts/editundo.ttf" id="2_nr82p"]
[ext_resource type="FontFile" uid="uid://c0w25r8vykatq" path="res://src/assets/fonts/Abaddon Bold.ttf" id="5_nu85i"]
[ext_resource type="FontFile" uid="uid://bhggoau4c0xk0" path="res://src/assets/fonts/Silver.ttf" id="6_c05vn"]
[ext_resource type="Theme" uid="uid://ch3x2byuiyaxy" path="res://src/assets/themes/menu.tres" id="6_nu85i"]

[node name="AboutMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dxe8x")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -121.0
offset_top = -95.0
offset_right = 1274.0
offset_bottom = 746.0
color = Color(0.300004, 0.0741538, 0, 0.356863)

[node name="CreatedByLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.517
anchor_top = 0.138
anchor_right = 0.517
anchor_bottom = 0.138
offset_left = -382.584
offset_top = -31.424
offset_right = 383.416
offset_bottom = 31.576
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("2_nr82p")
theme_override_font_sizes/font_size = 70
text = "Created by helpmeagain"

[node name="HomeButton" type="Button" parent="."]
texture_filter = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.036
anchor_top = 0.059
anchor_right = 0.036
anchor_bottom = 0.059
offset_left = -16.22
offset_top = -16.232
offset_right = 131.78
offset_bottom = 131.768
scale = Vector2(0.221184, 0.221184)
mouse_default_cursor_shape = 2
theme = ExtResource("1_5yryq")
icon = ExtResource("2_dxe8x")
icon_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.0
offset_top = -189.0
offset_right = 236.0
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="AboutMeLabel" type="Label" parent="VBoxContainer"]
texture_filter = 3
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_nu85i")
theme_override_font_sizes/font_size = 40
text = "Explore More!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_nu85i")
theme_override_constants/separation = 8

[node name="GitHubButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "GitHub Profile"

[node name="RepositoryButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Repository"

[node name="AssetsLabel" type="Label" parent="VBoxContainer"]
texture_filter = 3
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_nu85i")
theme_override_font_sizes/font_size = 40
text = "Assets"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("6_nu85i")
theme_override_constants/separation = 10

[node name="CharactersLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_c05vn")
theme_override_font_sizes/font_size = 40
text = "Characters"

[node name="CharactersContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/VBoxContainer/CharactersContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("6_c05vn")
theme_override_font_sizes/normal_font_size = 28
text = "Using Picrew よなよな集まるヤツら by 噤@tugu0096"
fit_content = true
scroll_active = false
tab_size = 9

[node name="TenguButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/CharactersContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Visit"

[node name="BackgroundLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_c05vn")
theme_override_font_sizes/font_size = 40
text = "Background"

[node name="CharactersContainer3" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/VBoxContainer/CharactersContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("6_c05vn")
theme_override_font_sizes/normal_font_size = 28
text = "House Visual Novel Backgrounds by Spiral Atlas"
fit_content = true
scroll_active = false
tab_size = 9

[node name="HouseVisualNovelButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/CharactersContainer3"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Visit"

[node name="CharactersContainer2" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/VBoxContainer/CharactersContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("6_c05vn")
theme_override_font_sizes/normal_font_size = 28
text = "Anime Backgrounds by Noraneko Games"
fit_content = true
scroll_active = false
tab_size = 9

[node name="AnimeBackgroundsButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/CharactersContainer2"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Visit"

[node name="UILabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_c05vn")
theme_override_font_sizes/font_size = 40
text = "UI"

[node name="HBoxContainer10" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer10"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("6_c05vn")
theme_override_font_sizes/normal_font_size = 28
text = "Lucid icon pack by Leo Red"
fit_content = true
scroll_active = false
tab_size = 9

[node name="LucidButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer10"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Visit"

[node name="HBoxContainer9" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer9"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("6_c05vn")
theme_override_font_sizes/normal_font_size = 28
text = "UI Pack - Cozy and Warm by ToffeeCraft"
fit_content = true
scroll_active = false
tab_size = 9

[node name="UICozyButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer9"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Visit"

[node name="HBoxContainer8" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("6_c05vn")
theme_override_font_sizes/normal_font_size = 28
text = "UI assets pack 2 by Sr.Toasty, licensed under CC0 1.0"
fit_content = true
scroll_active = false
tab_size = 9

[node name="UIAssetsPackButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Visit"

[node name="HBoxContainer7" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("6_c05vn")
theme_override_font_sizes/normal_font_size = 28
text = "Pixel Art GUI Elements by Mounir Tohami"
fit_content = true
scroll_active = false
tab_size = 9

[node name="GUIElementsButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Visit"

[node name="FontLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_c05vn")
theme_override_font_sizes/font_size = 40
text = "Fonts"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("6_c05vn")
theme_override_font_sizes/normal_font_size = 28
text = "Silver by Poppy Works, licensed under CC BY 4.0"
fit_content = true
scroll_active = false
tab_size = 9

[node name="SilverButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Visit"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("6_c05vn")
theme_override_font_sizes/normal_font_size = 28
text = "Abaddon by Nathan Scott"
fit_content = true
scroll_active = false
tab_size = 9

[node name="AbbadonButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Visit"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("6_c05vn")
theme_override_font_sizes/normal_font_size = 28
text = "Ruler by Ænigma"
fit_content = true
scroll_active = false
tab_size = 9

[node name="RulerButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Visit"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("6_c05vn")
theme_override_font_sizes/normal_font_size = 28
text = "Edit Undo by Ænigma"
fit_content = true
scroll_active = false
tab_size = 9

[node name="EditUndoButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Visit"

[node name="SoundsLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_c05vn")
theme_override_font_sizes/font_size = 40
text = "Sounds"

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("6_c05vn")
theme_override_font_sizes/normal_font_size = 28
text = "Dialog text sound effects by Alan Dalcastagne"
fit_content = true
scroll_active = false
tab_size = 9

[node name="DialogSoundButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Visit"

[connection signal="pressed" from="HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GitHubButton" to="." method="_on_git_hub_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RepositoryButton" to="." method="_on_repository_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/CharactersContainer/TenguButton" to="." method="_on_tengu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/CharactersContainer3/HouseVisualNovelButton" to="." method="_on_house_visual_novel_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/CharactersContainer2/AnimeBackgroundsButton" to="." method="_on_anime_backgrounds_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer10/LucidButton" to="." method="_on_lucid_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer9/UICozyButton" to="." method="_on_ui_cozy_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer8/UIAssetsPackButton" to="." method="_on_ui_assets_pack_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer7/GUIElementsButton" to="." method="_on_gui_elements_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/SilverButton" to="." method="_on_silver_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3/AbbadonButton" to="." method="_on_abbadon_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5/RulerButton" to="." method="_on_ruler_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4/EditUndoButton" to="." method="_on_edit_undo_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer6/DialogSoundButton" to="." method="_on_dialog_sound_button_pressed"]
